0.67
    POD: drop "--" in front of the commands.
    refresh: ensure ->rules is there before attempting to fiddle quilt
        integration

    Add support for version relations in META

    Debian::Dependency now survives being given a string with leading spaces